--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,12 @@
 root = true
 
+[*]
+indent_size = 4
+indent_style = space
+trim_trailing_whitespace = true
+insert_final_newline = true
+end_of_line = lf
+charset = utf-8
+
 [*.lua]
 indent_style = tab
